Fixed issue with current weather icon being horizontally squashed

--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,10 @@ img {
     height: 100%;
   }
 
+  #current-weather-icon {
+    width: 100%;
+  }
+
   #button-display-wrapper {
     display: none;
   }
